--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@
 # will likely look very different (and much more reasonable)
 
 [package]
-name = "kvdb-rocksdb"
+name = "kvdb-rocksdb1"
 version = "0.1.4"
 authors = ["Parity Technologies <admin@parity.io>"]
 description = "kvdb implementation backed by rocksDB"
